# tiny_graphics

./: .gitignore  CMakeLists.txt  README.md  plan.txt
src/: CMakeLists.txt  color.cpp  color.hpp  display.hpp  draw.hpp  framebuffer.hpp  image.cpp  image.hpp  lighting.hpp  main.cpp  model.hpp  rasterizer.cpp  rasterizer.hpp  ray_marching.hpp  sdf.hpp  shader.hpp  shading.hpp
src/math/: main.cpp  matrix.hpp  quaternion.hpp  transform.hpp  vector.hpp
test/: img.cpp
